@@ -89,7 +89,7 @@ a { color: #223366; }
 a.external { color: #336644; }
 a:visited { color: #8D0749; }
 a.printable { text-decoration: underline; }
-a.stub, #quickbar a.stub { color:#772233; text-decoration:none; }
+a.stub, span.mw-stub-example, #quickbar a.stub { color:#772233; text-decoration:none; }
 a.new, #quickbar a.new { color: #CC2200; }
 h2, h3, h4, h5, h6 { margin-bottom: 0; }
 small { font-size: 75%; }
